@@ -1,3 +1,7 @@
+2002-10-27  KUBO Takehiro  <kubo@jiubao.org>
+
+	* sample/gnome-canvas.rb: adapt sample to Ruby/GnomeCanvas2.
+
 2002-09-29  KUBO Takehiro  <kubo@jiubao.org>
 
 	* src/rbart.h, src/rbart_affine.c: add prefix to exported functions.
